# haskell-db

./: CHANGELOG.md  cabal.project  flake.nix  real-folk-db.cabal
exe/benchmarks/trie/: Main.hs
lib/Database/Lib/: SmartValue.hs  Sync.hs  Tx.hs
lib/Database/Lib/Data/: Dict.hs
lib/Database/Store/Persistent/: PrefixedDB.hs  Trie.hs
lib/Database/Store/Persistent/LMDB/: Base.hs
lib/Database/Store/Persistent/PrefixedDB/Interface/V1/: File.hs
lib/Database/Store/Persistent/Trie/: Internal.hs  LMDB.hs  Path.hs
lib/Database/Store/Persistent/Trie/LMDB/: Internal.hs
src/db/benchmarks/: Trie.hs
src/db/lib/Database/Lib/: IDManager.hs  SmartValue.hs  Sync.hs  Tx.hs
src/db/lib/Database/Lib/Data/Trie/: Text.hs
src/db/lib/Database/Store/Persistent/: PrefixedDB.hs  Trie.hs
src/db/lib/Database/Store/Persistent/LMDB/: Synced.hs
src/db/lib/Database/Store/Persistent/PrefixedDB/Interface/V1/: File.hs
src/db/lib/Database/Store/Persistent/Trie/: LMDB.hs
src/db/lib/Database/Store/Persistent/Trie/LMDB/: Internal.hs
src/db/tests/Test/Database/Lib/: SmartValueSpec.hs
src/db/tests/Test/Database/Store/Persistent/LMDB/: BaseSpec.hs  SyncedSpec.hs
src/db/tests/Test/Database/Store/Persistent/Trie/: LMDBSpec.hs  PathSpec.hs
src/db/tests/Test/Integration/: ServerSpec.hs
src/db/tests/Test/Lib/Spec/: Hashable.hs
src/db/tests/Test/Lib/Stub/: Store.hs
test/Test/Database/Lib/: IDManagerSpec.hs  SmartValueSpec.hs
test/Test/Database/Store/Persistent/: PrefixedDBSpec.hs  TrieSpec.hs
test/Test/Database/Store/Persistent/LMDB/: BaseSpec.hs  SyncedSpec.hs
test/Test/Database/Store/Persistent/Trie/: LMDBSpec.hs
test/Test/Integration/Server/: Module.hs
test/Test/Lib/Spec/: Binary.hs  Enum.hs
test/Test/Lib/Stub/: Store.hs
