cabal-version: 3.0
name: real-folk-db
version: 0.1.0.0

homepage: https://github.com/realfolk/haskell-db
license: LGPL-3.0-only
license-file: LICENSE

author: Dhruv Dang
maintainer: dhruv@realfolk.com

category: Database

build-type: Simple

common warnings
    ghc-options: -Wall

library
    import: warnings

    default-language: GHC2021
    hs-source-dirs: lib

    exposed-modules:
        Database.Lib.Data.Dict
        Database.Lib.Data.Trie.Text
        Database.Lib.IDManager
        Database.Lib.SmartValue
        Database.Lib.Sync
        Database.Lib.Tx
        Database.Store.Persistent.LMDB.Base
        Database.Store.Persistent.LMDB.Synced
        Database.Store.Persistent.Trie
        Database.Store.Persistent.Trie.Internal
        Database.Store.Persistent.Trie.LMDB
        Database.Store.Persistent.Trie.LMDB.Internal
        Database.Store.Persistent.Trie.Path

    build-depends:
      base ^>=4.16.4.0,
      binary,
      bytestring,
      containers,
      directory,
      hashable,
      lmdb,
      mdrn,
      mtl,
      pouch,
      stm,
      text,
      text-trie,
      unordered-containers

executable real-folk-db-benchmarks-trie
    import: warnings

    default-language: GHC2021
    hs-source-dirs: exe/benchmarks/trie
    main-is: Main.hs

    build-depends:
        async,
        base ^>=4.16.4.0,
        bytestring,
        criterion,
        mtl,
        pouch,
        real-folk-db,
        temporary,
        text

test-suite real-folk-db-test
    import: warnings

    type: exitcode-stdio-1.0

    default-language: GHC2021
    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        Test.Database.Lib.IDManagerSpec
        Test.Database.Lib.SmartValueSpec
        Test.Database.Store.Persistent.LMDB.BaseSpec
        Test.Database.Store.Persistent.LMDB.SyncedSpec
        Test.Database.Store.Persistent.Trie.LMDBSpec
        Test.Database.Store.Persistent.Trie.PathSpec
        Test.Database.Store.Persistent.TrieSpec
        Test.Lib.Spec.Binary
        Test.Lib.Spec.Enum
        Test.Lib.Spec.Hashable
        Test.Lib.Stub.Store

    build-depends:
        base ^>=4.16.4.0,
        binary,
        bytestring,
        containers,
        hashable,
        hspec,
        mdrn,
        mtl,
        pouch,
        real-folk-db,
        temporary,
        text
